# TP-IngWeb-2025

./: .env.bak  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
mi_aplicacion/: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  robots.txt
mi_aplicacion/bullet_journal/: forms.py  models.py  search_indexes.py  urls.py
mi_aplicacion/hacks_compatibilidad/: django_utils_compat.py
mi_aplicacion/just_a_student/: asgi.py  settings.py  urls.py  wsgi.py
mi_aplicacion/mi_aplicacion/: settings.py  urls.py
mi_aplicacion/search/: views.py
mi_aplicacion/static/: robots.txt
mi_aplicacion/templates/: base.html
mi_aplicacion/users/: forms.py  urls.py  views.py
mi_aplicacion/usuarios/: views.py
mi_aplicacion/whoosh_index/: MAIN_12lrwpvnqe5shi9k.seg  MAIN_1fiqoozy3av0t7x7.seg  MAIN_1kigjars2aqcqjk7.seg  MAIN_3wmgmu93nvb8ec7c.seg  MAIN_6wc4c8pyilnuwi06.seg  MAIN_7ju1yjoh5j7e9wh4.seg  MAIN_7w54iah8r3wj14pe.seg  MAIN_7x3lgg8otyv6ivld.seg  MAIN_9a2joz7mydjduz1m.seg  MAIN_9w2t5tv18l1to3rk.seg  MAIN_azio2e9h7tg35f1k.seg  MAIN_bb8r6um4pa3mwhff.seg  MAIN_blrdlwxoudbq5478.seg  MAIN_blywg5rj5rig2nfy.seg  MAIN_bxvehghn9snazx5z.seg  MAIN_c3lenwrm07mad4to.seg  MAIN_cknamit8dcv2h0yk.seg  MAIN_dsf4eymss59rqo5s.seg  MAIN_g1j49sh7xr7elftt.seg  MAIN_gvk0a1eth1tank6c.seg  MAIN_i6g9ndpv1u0l6oki.seg  MAIN_i6j396c9f9upczdf.seg  MAIN_ifcbt7b2nj00rexu.seg  MAIN_j4t6gqfho3lhf9x8.seg  MAIN_lopwazb1gzrl9752.seg  MAIN_mqjj86spzfbmglt9.seg  MAIN_mr4eh1kju06syyzv.seg  MAIN_mty7vjajm516t3hm.seg  MAIN_mwa7ske8imf4lwng.seg  MAIN_nb9gmsst25979uxr.seg  (+28 more)
(+48 files in other folders)
