[project]
name = "mi_aplicacion"
version = "0.1.0"
description = "Proyecto Django para Ingeniería Web"
requires-python = ">=3.10"

dependencies = [
    "django",
    "dj-database-url",
    "psycopg2-binary",
    "whitenoise[brotli]",
    "gunicorn",
    "django-cloudinary-storage>=0.3.0",
    "pillow>=11.3.0",
    "whoosh>=2.7.4",
    "django-haystack>=3.3.0",
    "python-dotenv>=1.1.1",
    "django-allauth>=65.12.1",
    "pyjwt>=2.10.1",
]
